--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Barebaro Sound Recorder</title>
+    <!-- Add this script anywhere in <head> (or right before </body>) -->
+    <script type="module" src="https://unpkg.com/wavesurfer.js/dist/web-component.js"></script>
   </head>
   <body>
     <div id="root"></div>
