--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,13 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Barebaro Sound Recorder</title>
-    <!-- Add this script anywhere in <head> (or right before </body>) -->
-    <script type="module" src="https://unpkg.com/wavesurfer.js/dist/web-component.js"></script>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Barebaros lyd</title>
+  <script type="module" src="/web-component.js"></script> <!-- self-hosted! -->
+  <style>
+    body {
+      min-height: 100vh;
+      margin: 0;
+      background: linear-gradient(135deg, #e0eafc 0%, #cfdef3 100%);
+      font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    h1 {
+      font-size: 36px;
+      font-weight: 700;
+      color: #2d3a4b;
+      margin-bottom: 32px;
+      text-align: center;
+      line-height: 1.1;
+    }
+    .record-btn, .reset-btn {
+      background: linear-gradient(90deg, #ff5858 0%, #f09819 100%);
+      color: #fff;
+      border: none;
+      border-radius: 40px;
+      padding: 20px 40px;
+      font-size: 22px;
+      font-weight: 600;
+      box-shadow: 0 8px 32px rgba(255,88,88,0.11);
+      cursor: pointer;
+      min-width: 240px;
+      margin-bottom: 24px;
+      transition: background 0.2s;
+    }
+    .reset-btn {
+      min-width: 180px;
+      padding: 16px 38px;
+      margin-top: 28px;
+    }
+    .hint, .tips {
+      color: #888;
+      text-align: center;
+    }
+    .tips {
+      font-size: 13px;
+      color: #999;
+      margin-top: 14px;
+    }
+    .waveform-wrapper {
+      max-width: 700px;
+      width: 95%;
+      min-height: 180px;
+      margin: 32px auto 0;
+      position: relative;
+    }
+    wave-surfer::part(region-handle) {
+      width: 36px !important;
+      background: rgba(24,90,157,0.12);
+      cursor: ew-resize;
+    }
+    wave-surfer::part(region-handle-left) {
+      border-left: 5px solid #185a9d;
+      border-radius: 6px 0 0 6px;
+    }
+    wave-surfer::part(region-handle-right) {
+      border-right: 5px solid #185a9d;
+      border-radius: 0 6px 6px 0;
+    }
+  </style>
+</head>
+<body>
+  <h1>Barebaros lyd</h1>
+  <button class="record-btn" id="record">Start opptak</button>
+  <div class="waveform-wrapper">
+    <wave-surfer id="wavesurfer" responsive style="display:none; width:100%; height:160px"></wave-surfer>
+    <div class="hint" style="display:none;">Dra/endre det grønne området, <b>trykk på det for å spille av</b></div>
+    <button class="reset-btn" id="reset" style="display:none;">Ta opp nytt</button>
+    <div class="tips" style="display:none;">Tips: Trykk på det grønne feltet for å spille valgt område</div>
+  </div>
+  <script>
+    // Grab elements
+    const recordBtn = document.getElementById('record');
+    const resetBtn = document.getElementById('reset');
+    const ws = document.getElementById('wavesurfer');
+    const hint = document.querySelector('.hint');
+    const tips = document.querySelector('.tips');
+    let mediaRecorder, chunks = [], audioUrl = null, isRecording = false;
+
+    // Recording logic
+    recordBtn.onclick = async () => {
+      if (!isRecording) {
+        recordBtn.textContent = "Stopp opptak";
+        isRecording = true;
+        const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
+        mediaRecorder = new window.MediaRecorder(stream);
+        chunks = [];
+        mediaRecorder.ondataavailable = (e) => chunks.push(e.data);
+        mediaRecorder.onstop = () => {
+          const blob = new Blob(chunks, { type: 'audio/webm' });
+          if (audioUrl) URL.revokeObjectURL(audioUrl);
+          audioUrl = URL.createObjectURL(blob);
+          ws.setAttribute('src', audioUrl);
+          ws.style.display = 'block';
+          hint.style.display = 'block';
+          resetBtn.style.display = 'inline-block';
+          tips.style.display = 'block';
+          recordBtn.style.display = 'none';
+        };
+        mediaRecorder.start();
+      } else {
+        recordBtn.textContent = "Start opptak";
+        isRecording = false;
+        mediaRecorder.stop();
+      }
+    };
+
+    resetBtn.onclick = () => {
+      if (audioUrl) URL.revokeObjectURL(audioUrl);
+      ws.style.display = 'none';
+      ws.removeAttribute('src');
+      hint.style.display = 'none';
+      tips.style.display = 'none';
+      resetBtn.style.display = 'none';
+      recordBtn.style.display = 'inline-block';
+    };
+
+    // Add a region after audio loads
+    ws.addEventListener('decode', () => {
+      ws.regions?.clearRegions?.();
+      const duration = ws.duration || 0;
+      ws.addRegion({
+        start: 0,
+        end: Math.max(2, duration),
+        color: 'rgba(63,23,39,0.35)',
+        drag: true,
+        resize: true,
+        content: 'RESIZE ME!'
+      });
+    });
+    // Play region on click
+    ws.addEventListener('region-clicked', e => {
+      e.stopPropagation();
+      e.detail.region?.play?.();
+    });
+  </script>
+</body>
 </html>
