--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Barebaros lyd</title>
-  <!-- Load Wavesurfer and Regions plugin from CDN (v7.x, ES module) -->
+  <!-- Wavesurfer & Regions via CDN -->
   <script type="module" src="https://unpkg.com/wavesurfer.js@7/dist/wavesurfer.esm.js"></script>
   <script type="module" src="https://unpkg.com/wavesurfer.js@7/dist/plugins/regions.esm.js"></script>
   <style>
@@ -27,41 +27,64 @@
     .waveform-wrapper {
       max-width: 700px; width: 95%; min-height: 180px; margin: 32px auto 0; position: relative;
     }
-    /* Enlarge region handles for easier touch! */
+    /* ----- BEAUTIFUL, BIG, SOFT HANDLES ----- */
     .ws-region-handle {
-      width: 48px !important;
-      height: 60px !important;
-      margin: 0 -24px;
-      background: rgba(24,90,157,0.18);
-      cursor: ew-resize;
+      width: 56px !important;
+      min-width: 56px !important;
+      height: 80px !important;
+      min-height: 80px !important;
+      margin: 0 -28px;
+      background: transparent !important;
+      border: none !important;
+      cursor: ew-resize !important;
+      z-index: 10;
+      pointer-events: auto !important;
+      position: relative;
+      display: flex !important;
+      align-items: center;
+      justify-content: center;
+    }
+    .ws-region-handle[data-resize="start"] {
+      border-left: 5px solid #4bb7ec !important;
+      border-radius: 18px 0 0 18px !important;
+    }
+    .ws-region-handle[data-resize="end"] {
+      border-right: 5px solid #4bb7ec !important;
+      border-radius: 0 18px 18px 0 !important;
+    }
+    .ws-region-handle .grabber-bg {
+      background: linear-gradient(135deg, #b7e2fc 0%, #a3cdfc 100%);
+      border-radius: 16px;
+      width: 40px;
+      height: 60px;
+      box-shadow: 0 2px 8px 0 #2d3a4b15;
       display: flex;
       align-items: center;
       justify-content: center;
-      z-index: 5;
-      touch-action: none;
     }
-    .ws-region-handle[data-resize="start"] {
-      border-left: 7px solid #185a9d;
-      border-radius: 12px 0 0 12px;
-    }
-    .ws-region-handle[data-resize="end"] {
-      border-right: 7px solid #185a9d;
-      border-radius: 0 12px 12px 0;
-    }
-    .grabber {
+    .ws-region-handle .grabber {
       font-size: 36px;
-      color: #185a9d;
+      color: #3498db;
       user-select: none;
       pointer-events: none;
-      margin: 0 auto;
+      letter-spacing: -0.25em;
+      opacity: 0.85;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      text-shadow: 0 2px 8px #fff8;
     }
     @media (max-width: 600px) {
       .ws-region-handle {
-        width: 64px !important;
-        height: 80px !important;
+        width: 72px !important;
+        min-width: 72px !important;
+        height: 96px !important;
+        min-height: 96px !important;
       }
-      .grabber {
-        font-size: 46px !important;
+      .ws-region-handle .grabber-bg {
+        width: 54px;
+        height: 80px;
+      }
+      .ws-region-handle .grabber {
+        font-size: 52px !important;
       }
     }
   </style>
@@ -86,7 +109,6 @@
     const tips = document.querySelector('.tips');
     let ws, regions, mediaRecorder, audioUrl = null, isRecording = false, chunks = [];
 
-    // Function to create a new Wavesurfer instance and add region
     function setupWaveSurfer(blobUrl) {
       if (ws) ws.destroy();
       regions = RegionsPlugin.create();
@@ -114,19 +136,22 @@
         e.stopPropagation();
         region.play();
       });
-      // Enlarge and add grabber icon to region handles
+      // Big beautiful region handles
       regions.on("region-created", (region) => {
         setTimeout(() => {
-          [region.element.children[0], region.element.children[1]].forEach((handle, i) => {
+          [region.element.children[0], region.element.children[1]].forEach(handle => {
             if (handle) {
               handle.classList.add("ws-region-handle");
-              // Add a visible grabber icon if not already present
-              if (!handle.querySelector('.grabber')) {
-                const grabber = document.createElement('div');
-                grabber.className = "grabber";
-                grabber.textContent = '⣿'; // Try '⠿' or '⋮' for different styles
-                handle.appendChild(grabber);
-              }
+              // Remove previous content
+              handle.innerHTML = "";
+              // Add background + icon
+              const bg = document.createElement('div');
+              bg.className = "grabber-bg";
+              const grabber = document.createElement('div');
+              grabber.className = "grabber";
+              grabber.textContent = '⠿'; // Try '≡' or '⋮⋮' if you like
+              bg.appendChild(grabber);
+              handle.appendChild(bg);
             }
           });
         }, 0);
