--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Barebaros lyd</title>
-  <!-- Wavesurfer & Regions plugin from CDN (v7.x, ES module) -->
   <script type="module" src="https://unpkg.com/wavesurfer.js@7/dist/wavesurfer.esm.js"></script>
   <script type="module" src="https://unpkg.com/wavesurfer.js@7/dist/plugins/regions.esm.js"></script>
   <style>
@@ -26,49 +25,6 @@
     .tips { font-size: 13px; color: #999; margin-top: 14px; }
     .waveform-wrapper {
       max-width: 700px; width: 95%; min-height: 180px; margin: 32px auto 0; position: relative;
-    }
-    /* --- Custom beautiful region handles --- */
-    .ws-region-handle {
-      width: 48px !important;
-      min-width: 48px !important;
-      height: 80px !important;
-      margin: 0 -24px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: transparent !important;
-      cursor: ew-resize;
-      z-index: 15;
-    }
-    .grabber-bg {
-      width: 38px;
-      height: 56px;
-      border-radius: 18px;
-      background: linear-gradient(135deg,#41d2ff 0%,#8be3fd 90%);
-      box-shadow: 0 2px 8px #8be3fd70;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border: 2.5px solid #185a9d;
-    }
-    .grabber {
-      font-size: 2.1em;
-      color: #185a9d;
-      letter-spacing: -2px;
-      user-select: none;
-      font-family: monospace;
-      font-weight: 700;
-      line-height: 1;
-      text-shadow: 0 1px 3px #fff9, 0 0px 2px #41d2ff90;
-    }
-    /* Optional: Animate handle on hover/touch */
-    .ws-region-handle:hover .grabber-bg,
-    .ws-region-handle:active .grabber-bg {
-      background: linear-gradient(135deg, #19a6ed 0%, #b8f2e6 100%);
-      border-color: #2d3a4b;
-      box-shadow: 0 2px 20px #41d2ff70;
-      transform: scale(1.06);
-      transition: all .1s;
     }
   </style>
 </head>
@@ -93,22 +49,35 @@
     let ws, regions, mediaRecorder, audioUrl = null, isRecording = false, chunks = [];
 
     function styleHandles(region) {
-      // Wait for DOM handles
       setTimeout(() => {
-        Array.from(region.element.children).forEach((handle, i) => {
-          if (handle && (i === 0 || i === 1)) {
-            handle.classList.add("ws-region-handle");
-            handle.innerHTML = "";
-            // Add blue pill + ⠿ icon
-            const bg = document.createElement('div');
-            bg.className = "grabber-bg";
-            const grabber = document.createElement('div');
-            grabber.className = "grabber";
-            grabber.textContent = '⠿';
-            bg.appendChild(grabber);
-            handle.appendChild(bg);
-          }
-        });
+        // Left
+        const left = region.element.children[0];
+        if (left) {
+          left.style.position = "absolute";
+          left.style.zIndex = "2";
+          left.style.width = "6px";
+          left.style.height = "100%";
+          left.style.top = "0px";
+          left.style.left = "0px";
+          left.style.cursor = "ew-resize";
+          left.style.borderLeft = "50px solid rgba(0, 105, 255, 0.15)";
+          left.style.borderRadius = "2px 0 0 2px";
+          left.style.background = "transparent";
+        }
+        // Right
+        const right = region.element.children[1];
+        if (right) {
+          right.style.position = "absolute";
+          right.style.zIndex = "2";
+          right.style.width = "6px";
+          right.style.height = "100%";
+          right.style.top = "0px";
+          right.style.right = "0px";
+          right.style.cursor = "ew-resize";
+          right.style.borderRight = "50px solid rgba(0, 105, 255, 0.15)";
+          right.style.borderRadius = "0 2px 2px 0";
+          right.style.background = "transparent";
+        }
       }, 0);
     }
 
