--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Barebaros lyd</title>
-  <!-- Wavesurfer & Regions plugin from CDN (v7.x, ES module) -->
   <script type="module" src="https://unpkg.com/wavesurfer.js@7/dist/wavesurfer.esm.js"></script>
   <script type="module" src="https://unpkg.com/wavesurfer.js@7/dist/plugins/regions.esm.js"></script>
   <style>
@@ -12,67 +11,30 @@
       min-height: 100vh;
       background: linear-gradient(135deg, #e0eafc 0%, #cfdef3 100%);
       font-family: 'Segoe UI', sans-serif;
-      display: flex; flex-direction: column; align-items: center; justify-content: flex-start;
-      padding: 40px 16px 60px;
+      display: flex; flex-direction: column; align-items: center; justify-content: center;
     }
-    h1 { font-size: 36px; font-weight: 700; color: #2d3a4b; margin: 0 0 28px; text-align:center; }
+    h1 { font-size: 36px; font-weight: 700; color: #2d3a4b; margin-bottom: 32px; }
     .record-btn, .reset-btn {
       background: linear-gradient(90deg, #ff5858 0%, #f09819 100%);
       color: #fff; border: none; border-radius: 40px; padding: 20px 40px;
       font-size: 22px; font-weight: 600; box-shadow: 0 8px 32px rgba(255,88,88,0.11);
-      cursor: pointer; min-width: 240px; transition: background 0.2s;
+      cursor: pointer; min-width: 240px; margin-bottom: 24px; transition: background 0.2s;
     }
-    .buttons { display: flex; justify-content: center; width: 100%; margin-top: 28px; }
+    .reset-btn { min-width: 180px; padding: 16px 38px; margin-top: 28px; }
     .hint, .tips { color: #888; text-align: center; }
     .tips { font-size: 13px; color: #999; margin-top: 14px; }
     .waveform-wrapper {
-      max-width: 720px; width: 95%; min-height: 180px; margin: 12px auto 0; position: relative;
-    }
-
-    /* ===== Big, inside-the-region handles (no outside overflow) ===== */
-    .ws-region-handle {
-      position: absolute;
-      top: 0;
-      height: 100% !important;
-      width: 56px !important;          /* actual big hit area */
-      min-width: 56px !important;
-      cursor: ew-resize !important;
-      z-index: 10;
-      pointer-events: auto !important;
-      background: transparent;          /* we draw the color via gradient below */
-    }
-    /* left handle lives inside region on the left side */
-    .ws-region-handle[data-resize="start"] {
-      left: 0;
-      /* draw a soft blue pad INSIDE the region (no visual overflow) */
-      background: linear-gradient(to right, rgba(0,105,255,0.15) 0 56px, transparent 56px);
-      box-shadow: inset 2px 0 0 rgba(45,58,75,0.25);      /* thin inner divider */
-      border-radius: 2px 0 0 2px;
-    }
-    /* right handle lives inside region on the right side */
-    .ws-region-handle[data-resize="end"] {
-      right: 0;
-      background: linear-gradient(to left, rgba(0,105,255,0.15) 0 56px, transparent 56px);
-      box-shadow: inset -2px 0 0 rgba(45,58,75,0.25);
-      border-radius: 0 2px 2px 0;
+      max-width: 700px; width: 95%; min-height: 180px; margin: 32px auto 0; position: relative;
     }
   </style>
 </head>
 <body>
   <h1>Barebaros lyd</h1>
-
+  <button class="record-btn" id="record">Start opptak</button>
   <div class="waveform-wrapper">
     <div id="waveform"></div>
-
-    <div class="hint" style="display:none;">
-      Dra/endre det grønne området, <b>trykk på det for å spille av</b>
-    </div>
-
-    <div class="buttons">
-      <button class="record-btn" id="record">Start opptak</button>
-      <button class="reset-btn" id="reset" style="display:none; margin-left:16px;">Ta opp nytt</button>
-    </div>
-
+    <div class="hint" style="display:none;">Dra/endre det grønne området, <b>trykk på det for å spille av</b></div>
+    <button class="reset-btn" id="reset" style="display:none;">Ta opp nytt</button>
     <div class="tips" style="display:none;">Tips: Trykk på det grønne feltet for å spille valgt område</div>
   </div>
 
@@ -88,18 +50,48 @@
 
     let ws, regions, mediaRecorder, audioUrl = null, isRecording = false, chunks = [];
 
+    // This must match your visual handle "overflow"
+    const HANDLE_BORDER_PX = 50;        // you use 50px in your styles
+    const EPS = 0.002;                  // tiny guard (2ms)
+
+    function handleEndWithVisual(region) {
+      // convert the extra 50px to seconds based on current waveform width & duration
+      const containerWidth = waveform.clientWidth || (ws && ws.getContainer && ws.getContainer().clientWidth) || 0;
+      if (!ws || !containerWidth) return region.end; // fallback
+      const dur = ws.getDuration() || 0;
+      const extraSec = (HANDLE_BORDER_PX / containerWidth) * dur;
+      return region.end + extraSec;
+    }
+
     function styleHandles(region) {
-      // Give handles our class & sizing (inside region)
       setTimeout(() => {
-        const left  = region.element.children[0];
-        const right = region.element.children[1];
+        // Left
+        const left = region.element.children[0];
         if (left) {
-          left.classList.add("ws-region-handle");
-          left.dataset.resize = "start";
+          left.style.position = "absolute";
+          left.style.zIndex = "2";
+          left.style.width = "6px";
+          left.style.height = "100%";
+          left.style.top = "0px";
+          left.style.left = "0px";
+          left.style.cursor = "ew-resize";
+          left.style.borderLeft = "50px solid rgba(0, 105, 255, 0.15)";
+          left.style.borderRadius = "2px 0 0 2px";
+          left.style.background = "transparent";
         }
+        // Right
+        const right = region.element.children[1];
         if (right) {
-          right.classList.add("ws-region-handle");
-          right.dataset.resize = "end";
+          right.style.position = "absolute";
+          right.style.zIndex = "2";
+          right.style.width = "6px";
+          right.style.height = "100%";
+          right.style.top = "0px";
+          right.style.right = "0px";
+          right.style.cursor = "ew-resize";
+          right.style.borderRight = "50px solid rgba(0, 105, 255, 0.15)";
+          right.style.borderRadius = "0 2px 2px 0";
+          right.style.background = "transparent";
         }
       }, 0);
     }
@@ -109,8 +101,8 @@
       regions = RegionsPlugin.create();
       ws = WaveSurfer.create({
         container: waveform,
-        waveColor:   "#43cea2",
-        progressColor:"#185a9d",
+        waveColor: "#43cea2",
+        progressColor: "#185a9d",
         height: 160,
         url: blobUrl,
         plugins: [regions],
@@ -125,31 +117,33 @@
           color: "rgba(63,23,39,0.35)",
           drag: true,
           resize: true,
-          content: "RESIZE ME!",
+          content: "RESIZE ME!"
         });
         styleHandles(region);
       });
 
-      // Play exactly the region (and stop at end)
+      // Click region -> play from start and stop at the *visual* right edge
       regions.on("region-clicked", (region, e) => {
         e.stopPropagation();
 
-        // preferred: built-in segment play (stops automatically at `end`)
-        ws.play(region.start, region.end);
+        const visualEnd = handleEndWithVisual(region);
+        // Ask Wavesurfer to stop at adjusted end
+        ws.play(region.start, visualEnd);
 
-        // safety net: if some browser misses stopping, use a tiny epsilon
+        // Safety net across browsers
         ws.un("timeupdate");
-        const EPS = 0.002; // ~2 ms guard
         ws.on("timeupdate", () => {
-          if (ws.getCurrentTime() >= region.end - EPS) {
+          if (ws.getCurrentTime() >= visualEnd - EPS) {
             ws.pause();
-            ws.seekTo(region.end / ws.getDuration());
+            ws.seekTo(visualEnd / ws.getDuration());
             ws.un("timeupdate");
           }
         });
       });
 
-      regions.on("region-created", styleHandles);
+      regions.on("region-created", (region) => {
+        styleHandles(region);
+      });
     }
 
     // Recording logic
@@ -157,11 +151,9 @@
       if (!isRecording) {
         recordBtn.textContent = "Stopp opptak";
         isRecording = true;
-
         const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
         mediaRecorder = new window.MediaRecorder(stream);
         chunks = [];
-
         mediaRecorder.ondataavailable = (e) => chunks.push(e.data);
         mediaRecorder.onstop = () => {
           const blob = new Blob(chunks, { type: "audio/webm" });
@@ -169,12 +161,11 @@
           audioUrl = URL.createObjectURL(blob);
 
           setupWaveSurfer(audioUrl);
-          hint.style.display = "block";
+          hint.style.display  = "block";
           resetBtn.style.display = "inline-block";
-          tips.style.display = "block";
+          tips.style.display  = "block";
           recordBtn.style.display = "none";
         };
-
         mediaRecorder.start();
       } else {
         recordBtn.textContent = "Start opptak";
@@ -186,7 +177,6 @@
     resetBtn.onclick = () => {
       if (audioUrl) URL.revokeObjectURL(audioUrl);
       if (ws) ws.destroy();
-
       hint.style.display = tips.style.display = "none";
       resetBtn.style.display = "none";
       recordBtn.style.display = "inline-block";
