--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -37,31 +37,16 @@
     <button class="reset-btn" id="reset" style="display:none;">Ta opp nytt</button>
     <div class="tips" style="display:none;">Tips: Trykk på det grønne feltet for å spille valgt område</div>
   </div>
-
   <script type="module">
     import WaveSurfer from "https://unpkg.com/wavesurfer.js@7/dist/wavesurfer.esm.js";
     import RegionsPlugin from "https://unpkg.com/wavesurfer.js@7/dist/plugins/regions.esm.js";
 
     const recordBtn = document.getElementById('record');
-    const resetBtn  = document.getElementById('reset');
-    const waveform  = document.getElementById('waveform');
-    const hint      = document.querySelector('.hint');
-    const tips      = document.querySelector('.tips');
-
+    const resetBtn = document.getElementById('reset');
+    const waveform = document.getElementById('waveform');
+    const hint = document.querySelector('.hint');
+    const tips = document.querySelector('.tips');
     let ws, regions, mediaRecorder, audioUrl = null, isRecording = false, chunks = [];
-
-    // This must match your visual handle "overflow"
-    const HANDLE_BORDER_PX = 50;        // you use 50px in your styles
-    const EPS = 0.002;                  // tiny guard (2ms)
-
-    function handleEndWithVisual(region) {
-      // convert the extra 50px to seconds based on current waveform width & duration
-      const containerWidth = waveform.clientWidth || (ws && ws.getContainer && ws.getContainer().clientWidth) || 0;
-      if (!ws || !containerWidth) return region.end; // fallback
-      const dur = ws.getDuration() || 0;
-      const extraSec = (HANDLE_BORDER_PX / containerWidth) * dur;
-      return region.end + extraSec;
-    }
 
     function styleHandles(region) {
       setTimeout(() => {
@@ -122,20 +107,36 @@
         styleHandles(region);
       });
 
-      // Click region -> play from start and stop at the *visual* right edge
+      // Play exactly between visible left/right edges (handles included)
       regions.on("region-clicked", (region, e) => {
         e.stopPropagation();
 
-        const visualEnd = handleEndWithVisual(region);
-        // Ask Wavesurfer to stop at adjusted end
-        ws.play(region.start, visualEnd);
+        const wfRect = waveform.getBoundingClientRect();
+        const dur = ws.getDuration();
 
-        // Safety net across browsers
+        // Prefer the handle edges; fall back to region box if needed
+        const leftEl  = region.element.children[0];
+        const rightEl = region.element.children[1];
+
+        const leftX  = (leftEl  ? leftEl.getBoundingClientRect().left  : region.element.getBoundingClientRect().left)  - wfRect.left;
+        const rightX = (rightEl ? rightEl.getBoundingClientRect().right : region.element.getBoundingClientRect().right) - wfRect.left;
+
+        const clamp = (n, min, max) => Math.min(max, Math.max(min, n));
+        const w = wfRect.width || 1;
+
+        const visualStart = (clamp(leftX, 0, w)  / w) * dur;
+        const visualEnd   = (clamp(rightX, 0, w) / w) * dur;
+
+        // Play exactly that slice
+        ws.play(visualStart, visualEnd);
+
+        // Safety net for browsers that ignore the end param occasionally
+        const EPS = 0.0015;
         ws.un("timeupdate");
         ws.on("timeupdate", () => {
           if (ws.getCurrentTime() >= visualEnd - EPS) {
             ws.pause();
-            ws.seekTo(visualEnd / ws.getDuration());
+            ws.seekTo(visualEnd / dur);
             ws.un("timeupdate");
           }
         });
@@ -161,9 +162,9 @@
           audioUrl = URL.createObjectURL(blob);
 
           setupWaveSurfer(audioUrl);
-          hint.style.display  = "block";
+          hint.style.display = "block";
           resetBtn.style.display = "inline-block";
-          tips.style.display  = "block";
+          tips.style.display = "block";
           recordBtn.style.display = "none";
         };
         mediaRecorder.start();
